--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.dagger:dagger:2.13'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-wire:2.4.0'
+    implementation 'com.squareup.wire:wire-runtime:2.3.0-RC1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.snapchat.kit.sdk:login:1.1.4'
     implementation 'com.snapchat.kit.sdk:core:1.1.4'
