--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.snapguess">
 
     <uses-sdk tools:overrideLibrary="com.snapchat.kit.sdk.login" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,6 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".GameScreenActivity"></activity>
+
         <meta-data
             android:name="com.snapchat.kit.sdk.clientId"
             android:value="58fa771e-81d7-4420-b3c8-9087141a4fca" />
@@ -22,7 +25,8 @@
         <meta-data
             android:name="com.snapchat.kit.sdk.scopes"
             android:resource="@array/snap_connect_scopes" />
-        <activity android:name=".GameActivity"></activity>
+
+        <activity android:name=".GameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,25 +34,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.snapchat.kit.sdk.SnapKitActivity"
-            android:launchMode="singleTask"
-            >
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="snapguess"
                     android:host="snap-kit"
                     android:path="/oauth2"
-                    />
+                    android:scheme="snapguess" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
