--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
+        multiDexEnabled true
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -17,11 +18,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.dagger:dagger:2.13'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -29,13 +36,18 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-wire:2.4.0'
     implementation 'com.squareup.wire:wire-runtime:2.3.0-RC1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.snapchat.kit.sdk:login:1.1.1'
-    implementation 'com.snapchat.kit.sdk:core:1.1.1'
-    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.snapchat.kit.sdk:login:1.2.0'
+    implementation 'com.snapchat.kit.sdk:core:1.2.0'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.scaledrone:scaledrone-java:0.6.0'
+    implementation 'com.google.firebase:firebase-database:18.0.0'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:2.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation "com.github.bumptech.glide:glide:4.9.0"
     implementation 'com.solacesystems:sol-jcsmp:10.6.2'
 
