--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.9.0"
     implementation 'com.solacesystems:sol-jcsmp:10.6.2'
 
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
+
 }
